finish footer section

--- a/index.html
+++ b/index.html
@@ -5,13 +5,82 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie</title>
 </head>
 
 <body>
-    <div class="container">
+    <footer>
+        <h1 class="heading">Team Members</h1>
+    <div class="container1">
+        <div class="card">
+            <div class="img">
+                <img src ="images (2).jpg">
+            </div>
+            <div class="top-text">
+                <div class="name">Nanor</div>
+                <p>Junior Web Developer</p>
+                <div class="socials">
+                    <a href="https://www.github.com/" target="_blank"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://www.linkedin.com/"target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                  </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="img">
+                <img src ="images (2).jpg">
+            </div>
+            <div class="top-text">
+                <div class="name">Omar</div>
+                <p>App Developer</p>
+                <div class="socials">
+                    <a href="https://www.github.com/" target="_blank"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://www.linkedin.com/"target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                  </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="img">
+                <img src ="images (2).jpg">
+            </div>
+            <div class="top-text">
+                <div class="name">Roza</div>
+                <p>Graphic Designer</p>
+                <div class="socials">
+                    <a href="https://www.github.com/" target="_blank"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://www.linkedin.com/"target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                  </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="img">
+                <img src ="images (2).jpg">
+            </div>
+            <div class="top-text">
+                <div class="name">Mohammad</div>
+                <p>Web Designer</p>
+                    <div class="socials">
+                      <a href="https://www.github.com/" target="_blank"><i class="fa-brands fa-github"></i></a>
+                      <a href="https://www.linkedin.com/"target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                      <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+                      <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    </div>
+          
+            </div>
+        </div>
     </div>
+</footer>
     <script type="text/javascript" src="script.js"></script>
 </body>
 
